--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div class="card" id="about">
         <h2>About Me</h2>
         <p>
-          Hello! My name is Zaw Lwin Phyo. Myint Myint Win's boyfriend and
-          front-end developer who is willing to create astonishing website.
+          Hello! My name is Zaw Lwin Phyo and front-end developer who is willing
+          to create astonishing website.
         </p>
       </div>
       <div class="card" id="projects">
